feat: namespace fields which aren't in the matrix spec
